# kr_mav_control

interfaces/kr_uzh_interface/: CMakeLists.txt  package.xml
interfaces/kr_uzh_interface/include/: mpc_bridge.h
interfaces/kr_uzh_interface/src/: mpc_bridge.cpp  mpc_bridge_node.cpp
kr_mav_launch/launch/: mpc_control.launch
kr_uzh_interface/: CMakeLists.txt
kr_uzh_interface/include/: mpc_input_bridge.h  mpc_output_bridge.h
kr_uzh_interface/src/: mpc_input_bridge.cpp  mpc_input_bridge_node.cpp  mpc_output_bridge_node.cpp
uzh_mpc_controller/kr_uzh_interface/include/: controller_bridge.h  mpc_input_bridge.h  mpc_output_bridge.h
uzh_mpc_controller/kr_uzh_interface/src/: mpc_input_bridge.cpp  mpc_output_bridge.cpp
